Fixed word wrapping

--- a/src/components/AppLogin/style.module.scss
+++ b/src/components/AppLogin/style.module.scss
@@ -22,10 +22,19 @@
 
 }
 
+
+.container > * {
+
+   white-space: nowrap;
+
+ }
+
+
 .container > img {
    width: 25em;
    padding: 4em;
 }
+
 
 .container > button {
    width: 80%;
